@@ -3,8 +3,10 @@ export( "J" )
 export( "%instanceof%" )
 export(is.jnull, .r2j, .rJava.base.path)
 exportClasses(jobjRef, jarrayRef, jfloat, jlong, jbyte, jchar, jclassName)
-exportMethods(show, "$", "$<-", "==", "!=", names, new, as.character, length)
-importFrom(methods, new) 
+exportMethods(show, "$", "$<-", "==", "!=", names, new, as.character, length, head, tail, "[", "[[" )
+importFrom(methods, new)
+importFrom(utils,head)
+importFrom(utils,tail)
 S3method(with, jobjRef)
 S3method(within, jobjRef)
 S3method(with, jclassName)
